Constructors should not be used to instantiate "String", "BigInteger", "BigDecimal" and primitive-wrapper classes
Signed-off-by: David Trochel <d.trochel@axelor.com>